created form and email sign up

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
   <div class="section-1"> 
   <div class="header">
   <img src="./images/netflix-logo.png" width="150px" alt="netflix-logo" />
-  <button class="signup">Sign up </button>
+  <button class="sign-up">Sign up </button>
   </div>
-   <h1>Unlimited movies, TV shows, and more.</h1>
+   <h1>Unlimited movies, TV
+    <br/>shows, and more.</h1>
     <h3>Watch anywhere. Cancel anytime.</h3>
     <h5>
       Ready to watch? Enter your email to create or restart your membership.
     </h5>
+    <form>
+      <input type="text" class="" placeholder="Your E-Mail Address" />
+     <button type="button" class=""> Get started</button>
+    </form> 
   </div>
   
   <div class="section-2"> 
