--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="section-1"> 
   <div class="header">
   <img src="./images/netflix-logo.png" width="150px" alt="netflix-logo" />
-  <button class="sign-up">Sign up </button>
+  <button class="sign-up" alt="sign-up">Sign up </button>
   </div>
    <h1>Unlimited movies, TV
     <br/>shows, and more.</h1>
@@ -19,12 +19,43 @@
       Ready to watch? Enter your email to create or restart your membership.
     </h5>
     <form>
-      <input type="text" class="" placeholder="Your E-Mail Address" />
-     <button type="button" class=""> Get started</button>
-    </form> 
+      <input type="text" class="email" placeholder="E-Mail Address" />
+     <button type="button" class="get-started"> Get Started  >  </button>
+    </form>
   </div>
-  
+ <hr class="style-one">
   <div class="section-2"> 
+    <h1>
+      Enjoy on your TV.
+    </h1>
+    <h3>
+      Watch on Smart TVs, Playstation, Xbox, 
+      Chromecast, Apple TV, Blu-ray players, and 
+      more.
+    </h3>
+    <img src="./images/tv.png">
   </div>
+   <hr class="style-one">
+
+     <div class="section-2"> 
+      <img src="./images/mobile.jpg">
+   <h1>
+    Download your shows to watch offline.
+   </h1>
+   <h3>
+    Save your favorites easily and always have something to watch.
+   </h3>
+   </div>
+  <hr class="style-one">
+
+      <div class="section-2"> 
+   <h1>Watch everywhere.</h1>
+   <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h3>
+      </div>
+        <hr class="style-one">
+         <div class="section-2"> 
+      <h1>Create profiles for kids.
+</h1>
+      <h3>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</h3>
   </body>
 </html>
